# ADCToolbox

./: .gitignore  .gitmodules  AGENTS.md  CD_SETUP_GUIDE.md  CHANGELOG.md  README.md
python/: LICENSE  MANIFEST.in  README.md  pyproject.toml
python/docs/source/: changelog.rst  conf.py  index.rst  installation.rst  python_matlab_parity.rst  quickstart.rst
python/src/adctoolbox/: __init__.py  cli.py  common.py  skill_cli.py
python/tests/: README.md  conftest.py
python/tests/compare/: __init__.py  _csv_comparator.py  _runner.py  run_all_comparisons.py  run_analog_comparisons.py  run_digital_comparisons.py  test_compare_analyze_phase_spectrum.py  test_compare_analyze_spectrum.py  test_compare_basic.py  test_compare_bit_activity.py  test_compare_decompose_harmonics.py  test_compare_enob_bit_sweep.py  test_compare_err_auto_correlation.py  test_compare_err_envelope_spectrum.py  test_compare_err_hist_sine_code.py  test_compare_err_hist_sine_phase.py  test_compare_err_pdf.py  test_compare_err_spectrum.py  test_compare_fg_cal_sine.py  test_compare_fit_static_nonlin.py  test_compare_inl_sine.py  test_compare_overflow_chk.py  test_compare_sine_fit.py  test_compare_weight_scaling.py  test_runner_strict_failures.py
python/tests/integration/: test_analyze_phase_spectrum_fft.py  test_analyze_phase_spectrum_lms.py  test_analyze_spectrum.py  test_basic.py  test_bit_activity.py  test_decompose_harmonics.py  test_enob_bit_sweep.py  test_err_auto_correlation.py  test_err_envelope_spectrum.py  test_err_hist_sine_code.py  test_err_hist_sine_phase.py  test_err_pdf.py  test_inl_sine.py  (+10 more)
(+381 files in other folders)
